--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-popper": "^0.9.2",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "2.0.5",
     "reactstrap": "^5.0.0"
   },
