--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "font-awesome": "^4.7.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-js-pagination": "^3.0.2",
     "react-popper": "^0.9.2",
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.8",
